source/glad2/gles2.d


alias PFNGLACTIVESHADERPROGRAMPROC = void function (GLuint pipeline, GLuint program);
alias PFNGLACTIVETEXTUREPROC = void function (GLenum texture);
alias PFNGLATTACHSHADERPROC = void function (GLuint program, GLuint shader);
alias PFNGLBEGINQUERYPROC = void function (GLenum target, GLuint id);
alias PFNGLBEGINTRANSFORMFEEDBACKPROC = void function (GLenum primitiveMode);
alias PFNGLBINDATTRIBLOCATIONPROC = void function (GLuint program, GLuint index, const(GLchar)* name);
alias PFNGLBINDBUFFERPROC = void function (GLenum target, GLuint buffer);
alias PFNGLBINDBUFFERBASEPROC = void function (GLenum target, GLuint index, GLuint buffer);
alias PFNGLBINDBUFFERRANGEPROC = void function (GLenum target, GLuint index, GLuint buffer, GLintptr offset, GLsizeiptr size);
alias PFNGLBINDFRAMEBUFFERPROC = void function (GLenum target, GLuint framebuffer);
alias PFNGLBINDIMAGETEXTUREPROC = void function (GLuint unit, GLuint texture, GLint level, GLboolean layered, GLint layer, GLenum access, GLenum format);
alias PFNGLBINDPROGRAMPIPELINEPROC = void function (GLuint pipeline);
alias PFNGLBINDRENDERBUFFERPROC = void function (GLenum target, GLuint renderbuffer);
alias PFNGLBINDSAMPLERPROC = void function (GLuint unit, GLuint sampler);
alias PFNGLBINDTEXTUREPROC = void function (GLenum target, GLuint texture);
alias PFNGLBINDTRANSFORMFEEDBACKPROC = void function (GLenum target, GLuint id);
alias PFNGLBINDVERTEXARRAYPROC = void function (GLuint array);
alias PFNGLBINDVERTEXBUFFERPROC = void function (GLuint bindingindex, GLuint buffer, GLintptr offset, GLsizei stride);
alias PFNGLBLENDCOLORPROC = void function (GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha);
alias PFNGLBLENDEQUATIONPROC = void function (GLenum mode);
alias PFNGLBLENDEQUATIONSEPARATEPROC = void function (GLenum modeRGB, GLenum modeAlpha);
alias PFNGLBLENDFUNCPROC = void function (GLenum sfactor, GLenum dfactor);
alias PFNGLBLENDFUNCSEPARATEPROC = void function (GLenum sfactorRGB, GLenum dfactorRGB, GLenum sfactorAlpha, GLenum dfactorAlpha);
alias PFNGLBLITFRAMEBUFFERPROC = void function (GLint srcX0, GLint srcY0, GLint srcX1, GLint srcY1, GLint dstX0, GLint dstY0, GLint dstX1, GLint dstY1, GLbitfield mask, GLenum filter);
alias PFNGLBUFFERDATAPROC = void function (GLenum target, GLsizeiptr size, const(void)* data, GLenum usage);
alias PFNGLBUFFERSUBDATAPROC = void function (GLenum target, GLintptr offset, GLsizeiptr size, const(void)* data);
alias PFNGLCHECKFRAMEBUFFERSTATUSPROC = uint function (GLenum target);
alias PFNGLCLEARPROC = void function (GLbitfield mask);
alias PFNGLCLEARBUFFERFIPROC = void function (GLenum buffer, GLint drawbuffer, GLfloat depth, GLint stencil);
alias PFNGLCLEARBUFFERFVPROC = void function (GLenum buffer, GLint drawbuffer, const(GLfloat)* value);
alias PFNGLCLEARBUFFERIVPROC = void function (GLenum buffer, GLint drawbuffer, const(GLint)* value);
alias PFNGLCLEARBUFFERUIVPROC = void function (GLenum buffer, GLint drawbuffer, const(GLuint)* value);
alias PFNGLCLEARCOLORPROC = void function (GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha);
alias PFNGLCLEARDEPTHFPROC = void function (GLfloat d);
alias PFNGLCLEARSTENCILPROC = void function (GLint s);
alias PFNGLCLIENTWAITSYNCPROC = uint function (GLsync sync, GLbitfield flags, GLuint64 timeout);
alias PFNGLCOLORMASKPROC = void function (GLboolean red, GLboolean green, GLboolean blue, GLboolean alpha);
alias PFNGLCOMPILESHADERPROC = void function (GLuint shader);
alias PFNGLCOMPRESSEDTEXIMAGE2DPROC = void function (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLint border, GLsizei imageSize, const(void)* data);
alias PFNGLCOMPRESSEDTEXIMAGE3DPROC = void function (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLsizei depth, GLint border, GLsizei imageSize, const(void)* data);
alias PFNGLCOMPRESSEDTEXSUBIMAGE2DPROC = void function (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLsizei imageSize, const(void)* data);
alias PFNGLCOMPRESSEDTEXSUBIMAGE3DPROC = void function (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint zoffset, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLsizei imageSize, const(void)* data);
alias PFNGLCOPYBUFFERSUBDATAPROC = void function (GLenum readTarget, GLenum writeTarget, GLintptr readOffset, GLintptr writeOffset, GLsizeiptr size);
alias PFNGLCOPYTEXIMAGE2DPROC = void function (GLenum target, GLint level, GLenum internalformat, GLint x, GLint y, GLsizei width, GLsizei height, GLint border);
alias PFNGLCOPYTEXSUBIMAGE2DPROC = void function (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint x, GLint y, GLsizei width, GLsizei height);
alias PFNGLCOPYTEXSUBIMAGE3DPROC = void function (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint zoffset, GLint x, GLint y, GLsizei width, GLsizei height);
alias PFNGLCREATEPROGRAMPROC = uint function ();
alias PFNGLCREATESHADERPROC = uint function (GLenum type);
alias PFNGLCREATESHADERPROGRAMVPROC = uint function (GLenum type, GLsizei count, const(GLchar*)* strings);
alias PFNGLCULLFACEPROC = void function (GLenum mode);
alias PFNGLDELETEBUFFERSPROC = void function (GLsizei n, const(GLuint)* buffers);
alias PFNGLDELETEFRAMEBUFFERSPROC = void function (GLsizei n, const(GLuint)* framebuffers);
alias PFNGLDELETEPROGRAMPROC = void function (GLuint program);
alias PFNGLDELETEPROGRAMPIPELINESPROC = void function (GLsizei n, const(GLuint)* pipelines);
alias PFNGLDELETEQUERIESPROC = void function (GLsizei n, const(GLuint)* ids);
alias PFNGLDELETERENDERBUFFERSPROC = void function (GLsizei n, const(GLuint)* renderbuffers);
alias PFNGLDELETESAMPLERSPROC = void function (GLsizei count, const(GLuint)* samplers);
alias PFNGLDELETESHADERPROC = void function (GLuint shader);
alias PFNGLDELETESYNCPROC = void function (GLsync sync);
alias PFNGLDELETETEXTURESPROC = void function (GLsizei n, const(GLuint)* textures);
alias PFNGLDELETETRANSFORMFEEDBACKSPROC = void function (GLsizei n, const(GLuint)* ids);
alias PFNGLDELETEVERTEXARRAYSPROC = void function (GLsizei n, const(GLuint)* arrays);
alias PFNGLDEPTHFUNCPROC = void function (GLenum func);
alias PFNGLDEPTHMASKPROC = void function (GLboolean flag);
alias PFNGLDEPTHRANGEFPROC = void function (GLfloat n, GLfloat f);
alias PFNGLDETACHSHADERPROC = void function (GLuint program, GLuint shader);
alias PFNGLDISABLEPROC = void function (GLenum cap);
alias PFNGLDISABLEVERTEXATTRIBARRAYPROC = void function (GLuint index);
alias PFNGLDISPATCHCOMPUTEPROC = void function (GLuint num_groups_x, GLuint num_groups_y, GLuint num_groups_z);
alias PFNGLDISPATCHCOMPUTEINDIRECTPROC = void function (GLintptr indirect);
alias PFNGLDRAWARRAYSPROC = void function (GLenum mode, GLint first, GLsizei count);
alias PFNGLDRAWARRAYSINDIRECTPROC = void function (GLenum mode, const(void)* indirect);
alias PFNGLDRAWARRAYSINSTANCEDPROC = void function (GLenum mode, GLint first, GLsizei count, GLsizei instancecount);
alias PFNGLDRAWBUFFERSPROC = void function (GLsizei n, const(GLenum)* bufs);
alias PFNGLDRAWELEMENTSPROC = void function (GLenum mode, GLsizei count, GLenum type, const(void)* indices);
alias PFNGLDRAWELEMENTSINDIRECTPROC = void function (GLenum mode, GLenum type, const(void)* indirect);
alias PFNGLDRAWELEMENTSINSTANCEDPROC = void function (GLenum mode, GLsizei count, GLenum type, const(void)* indices, GLsizei instancecount);
alias PFNGLDRAWRANGEELEMENTSPROC = void function (GLenum mode, GLuint start, GLuint end, GLsizei count, GLenum type, const(void)* indices);
alias PFNGLENABLEPROC = void function (GLenum cap);
alias PFNGLENABLEVERTEXATTRIBARRAYPROC = void function (GLuint index);
alias PFNGLENDQUERYPROC = void function (GLenum target);
alias PFNGLENDTRANSFORMFEEDBACKPROC = void function ();
alias PFNGLFENCESYNCPROC = __GLsync* function (GLenum condition, GLbitfield flags);
alias PFNGLFINISHPROC = void function ();
alias PFNGLFLUSHPROC = void function ();
alias PFNGLFLUSHMAPPEDBUFFERRANGEPROC = void function (GLenum target, GLintptr offset, GLsizeiptr length);
alias PFNGLFRAMEBUFFERPARAMETERIPROC = void function (GLenum target, GLenum pname, GLint param);
alias PFNGLFRAMEBUFFERRENDERBUFFERPROC = void function (GLenum target, GLenum attachment, GLenum renderbuffertarget, GLuint renderbuffer);
alias PFNGLFRAMEBUFFERTEXTURE2DPROC = void function (GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level);
alias PFNGLFRAMEBUFFERTEXTURELAYERPROC = void function (GLenum target, GLenum attachment, GLuint texture, GLint level, GLint layer);
alias PFNGLFRONTFACEPROC = void function (GLenum mode);
alias PFNGLGENBUFFERSPROC = void function (GLsizei n, GLuint* buffers);
alias PFNGLGENFRAMEBUFFERSPROC = void function (GLsizei n, GLuint* framebuffers);
alias PFNGLGENPROGRAMPIPELINESPROC = void function (GLsizei n, GLuint* pipelines);
alias PFNGLGENQUERIESPROC = void function (GLsizei n, GLuint* ids);
alias PFNGLGENRENDERBUFFERSPROC = void function (GLsizei n, GLuint* renderbuffers);
alias PFNGLGENSAMPLERSPROC = void function (GLsizei count, GLuint* samplers);
alias PFNGLGENTEXTURESPROC = void function (GLsizei n, GLuint* textures);
alias PFNGLGENTRANSFORMFEEDBACKSPROC = void function (GLsizei n, GLuint* ids);
alias PFNGLGENVERTEXARRAYSPROC = void function (GLsizei n, GLuint* arrays);
alias PFNGLGENERATEMIPMAPPROC = void function (GLenum target);
alias PFNGLGETACTIVEATTRIBPROC = void function (GLuint program, GLuint index, GLsizei bufSize, GLsizei* length, GLint* size, GLenum* type, GLchar* name);
alias PFNGLGETACTIVEUNIFORMPROC = void function (GLuint program, GLuint index, GLsizei bufSize, GLsizei* length, GLint* size, GLenum* type, GLchar* name);
alias PFNGLGETACTIVEUNIFORMBLOCKNAMEPROC = void function (GLuint program, GLuint uniformBlockIndex, GLsizei bufSize, GLsizei* length, GLchar* uniformBlockName);
alias PFNGLGETACTIVEUNIFORMBLOCKIVPROC = void function (GLuint program, GLuint uniformBlockIndex, GLenum pname, GLint* params);
alias PFNGLGETACTIVEUNIFORMSIVPROC = void function (GLuint program, GLsizei uniformCount, const(GLuint)* uniformIndices, GLenum pname, GLint* params);
alias PFNGLGETATTACHEDSHADERSPROC = void function (GLuint program, GLsizei maxCount, GLsizei* count, GLuint* shaders);
alias PFNGLGETATTRIBLOCATIONPROC = int function (GLuint program, const(GLchar)* name);
alias PFNGLGETBOOLEANI_VPROC = void function (GLenum target, GLuint index, GLboolean* data);
alias PFNGLGETBOOLEANVPROC = void function (GLenum pname, GLboolean* data);
alias PFNGLGETBUFFERPARAMETERI64VPROC = void function (GLenum target, GLenum pname, GLint64* params);
alias PFNGLGETBUFFERPARAMETERIVPROC = void function (GLenum target, GLenum pname, GLint* params);
alias PFNGLGETBUFFERPOINTERVPROC = void function (GLenum target, GLenum pname, void** params);
alias PFNGLGETERRORPROC = uint function ();
alias PFNGLGETFLOATVPROC = void function (GLenum pname, GLfloat* data);
alias PFNGLGETFRAGDATALOCATIONPROC = int function (GLuint program, const(GLchar)* name);
alias PFNGLGETFRAMEBUFFERATTACHMENTPARAMETERIVPROC = void function (GLenum target, GLenum attachment, GLenum pname, GLint* params);
alias PFNGLGETFRAMEBUFFERPARAMETERIVPROC = void function (GLenum target, GLenum pname, GLint* params);
alias PFNGLGETINTEGER64I_VPROC = void function (GLenum target, GLuint index, GLint64* data);
alias PFNGLGETINTEGER64VPROC = void function (GLenum pname, GLint64* data);
alias PFNGLGETINTEGERI_VPROC = void function (GLenum target, GLuint index, GLint* data);
alias PFNGLGETINTEGERVPROC = void function (GLenum pname, GLint* data);
alias PFNGLGETINTERNALFORMATIVPROC = void function (GLenum target, GLenum internalformat, GLenum pname, GLsizei count, GLint* params);
alias PFNGLGETMULTISAMPLEFVPROC = void function (GLenum pname, GLuint index, GLfloat* val);
alias PFNGLGETPROGRAMBINARYPROC = void function (GLuint program, GLsizei bufSize, GLsizei* length, GLenum* binaryFormat, void* binary);
